Cleaned up index and added specifications for racquetball page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<!-- NAME: Mike Vance
+<!-- NAME: OyeInyalowda
 	Prog Purpose: index.html for github page demonstrating college and personal projects.
 -->
 <html lang='eng'>
 <head>
-	<title>Mike Vance's Index</title>
+	<title>OyeInyalowda's Homepage</title>
 	<style>
 		body {background-color:#000000; 
 		font-family:arial, helvetica, sans-serif; 
@@ -36,22 +36,12 @@
 	</tr>
 	</table>
 
-<img src='index_banner.jpg' alt=' Custom made by Mike Vance using Pixlr ' width="100%">
+<img src=null alt=' alt text ' width="100%">
 <h1></h1>
 <h2>Projects</h2>
 
 <ul>
 	<li><a href='racquetball.html'> Racquetball Game </a></li>
-</ul>
-
-<h2>CSC 110 Python Programs</h2>
-
-<ul>
-	<li><a href=> Placeholder </a></li>
-		<ul style="font-size: .75em; margin-left:3em;">
-			<li><a href=> Sub Placeholder </a></li>
-		</ul>
-
 </ul>
 
 </body>
