--- a/racquetball.html
+++ b/racquetball.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- NAME: OyeInyalowda
+	Prog Purpose: Page demonstrating a racquetball game created for a software engineering course at James Madison University.
+-->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -37,12 +40,23 @@
     color: #ffffff; border-style: hidden;'>
     <tr>
       <td><a href='index.html'> Home </a></td>
-      <td><a href='https://www.w3schools.com/html/'> W3 Schools </a></td>
-      <td><a href='contactus.html'> Contact Us </a></td>
-    
+      <td><a href='https://www.w3schools.com/html/'> W3 Schools </a></td>    
     </tr>
     </table>
 
     <script src="src/racquetball.js"></script>
+
+    <h2>Original Racquetball Specifications</h2>
+
+    <ul style="font-size: 1em; margin-left:3em;">
+      <li>The player controls a tall and thin rectangle on the right side of the screen. 
+        They may move it up and down with the arrow keys, but not left and right.</li>
+      <li>A ball will be launched from the left side of the screen towards the right, at a diagonal.</li>
+      <li>The player will try to bounce the ball back towards the left side of the screen. Every time they do, they get a point.</li>
+      <li>If the player misses the ball and it goes beyond the right side of the screen, the player loses a point. The ball will then be launched again from the left side of the screen.</li>
+      <li>The ball should bounce off of the top and bottom and left side of the screen.</li>
+      <li>Display the score at the top left of the screen using the text() function.</li>
+    </ul>
+
   </body>
 </html>
