Added pause feature, pause screen, racquet guide,  round high score feature, full reset feature. Updated colors, racquet speed, and ball speed.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <h2>Projects</h2>
 
 <ul>
-	<li><a href='racquetball.html'> Racquetball Game </a></li>
+	<li><a href='racquetball.html'> Racquetball v2 </a></li>
+	<li><a href='racquetball-v3.html'> Racquetball v3 </a></li>
 </ul>
 
 </body>
