Added repo link

--- a/racquetball-v3.html
+++ b/racquetball-v3.html
@@ -48,6 +48,8 @@
 
     <div id="game-container"></div>
 
+    <a href='https://github.com/OyeInyalowda/literate-enigma'> Source Code </a>
+
     <h2>Added Features</h2>
     <ul>
       <li>Added Pause / Unpause</li>
@@ -63,6 +65,13 @@
       <li>Persistent high scores with user names</li>
       <li>New Mode: Ball speed increases gradually with score</li> 
       <li>Game over</li>
+      <li>adjustable window size</li>
+      <li>difficulty levels</li>
+    </ul>
+
+    <h2>Things to fix</h2>
+    <ul>
+      <li>screen scrolls when arrow keys are pressed</li>
     </ul>
 
   </body>
