Fixed screen scrolling when playing racquetball

--- a/racquetball-v3.html
+++ b/racquetball-v3.html
@@ -51,7 +51,7 @@
 
     <h3>Things to fix</h3>
     <ul>
-      <li>Screen scrolls when arrow keys are pressed</li>
+      <li>Screen scrolls when arrow keys are pressed - Fixed 20250303</li>
     </ul>
 
   </body>
