Reformatted class names and added placeholders for new Racquet and Ball classes

--- a/racquetball-v3.html
+++ b/racquetball-v3.html
@@ -26,7 +26,9 @@
 
     <h2>Racquetball Version 2</h2>
 
-    <script src="src/racquetball-v3.js"></script>
+    <script src="src/Racquet.js"></script>
+    <script src="src/Ball.js"></script>
+    <script src="src/Racquetball-v3.js"></script>
     <div id="game-container"></div>
 
     <h3>Added Features</h3>
