--- a/racquetball.html
+++ b/racquetball.html
@@ -27,7 +27,7 @@
 
     <h2>Racquetball Version 2</h2>
 
-    <script src="src/racquetball.js"></script>
+    <script src="src/Racquetball.js"></script>
     <div id="game-container"></div>
 
     <h3>Original Specifications</h3>
