Moved objects into separate files and cleaned unneeded files from repo

--- a/racquetball-v3.html
+++ b/racquetball-v3.html
@@ -26,8 +26,9 @@
 
     <h2>Racquetball Version 2</h2>
 
-    <script src="src/Racquet.js"></script>
-    <script src="src/Ball.js"></script>
+    <script src="src/objects/Racquet.js"></script>
+    <script src="src/objects/Ball.js"></script>
+    <script src="src/objects/Game.js"></script>
     <script src="src/Racquetball-v3.js"></script>
     <div id="game-container"></div>
 
