Added lives and game over feature

--- a/racquetball-v3.html
+++ b/racquetball-v3.html
@@ -24,10 +24,11 @@
       </tr>
     </table>
 
-    <h2>Racquetball Version 2</h2>
+    <h2>Racquetball Version 3</h2>
 
     <script src="src/objects/Racquet.js"></script>
     <script src="src/objects/Ball.js"></script>
+    <script src="src/objects/UserInterface.js"></script>
     <script src="src/objects/Game.js"></script>
     <script src="src/Racquetball-v3.js"></script>
     <div id="game-container"></div>
@@ -40,6 +41,7 @@
       <li>Added racquet 'guide' to right side of arena</li>
       <li>Increased arena size, ball speed, and racquet speed</li>
       <li>New colors</li>
+      <li>Lives with game over condition</li>
     </ul>
 
     <h3>Future Features</h3>
@@ -47,9 +49,9 @@
       <li>Full Screen Mode</li>
       <li>Persistent high scores with user names</li>
       <li>New Mode: Ball speed increases gradually with score</li> 
-      <li>Game over</li>
       <li>Adjustable window size</li>
       <li>Difficulty levels</li>
+      <li>Rework bounce mechanics so racquet velocity is imparted on the ball</li>
     </ul>
 
     <h3>Things to fix</h3>
