Partially implemented the Scoreboard class

--- a/racquetball-v3.html
+++ b/racquetball-v3.html
@@ -26,8 +26,10 @@
 
     <h2>Racquetball Version 3</h2>
 
+    <script src="src/scoreboard.txt"></script>
     <script src="src/objects/Racquet.js"></script>
     <script src="src/objects/Ball.js"></script>
+    <script src="src/objects/Scoreboard.js"></script>
     <script src="src/objects/UserInterface.js"></script>
     <script src="src/objects/Game.js"></script>
     <script src="src/Racquetball-v3.js"></script>
